tests/e2e/entity_minus2.error
Error: syntax error in story at line 1, column 1

1|    -a = 0
      ^

E0041: `-` is not allowed here
